[package]
name = "dog"
version = "0.1.0-pre"
authors = ["Benjamin Sago <ogham@bsago.me>"]
edition = "2018"
exclude = [
    "/completions/*", "/man/*", "/xtests/*",
    "/dog-screenshot.png", "/Justfile", "/README.md", "/.rustfmt.toml", "/.travis.yml",
]

[[bin]]
name = "dog"
path = "src/main.rs"

[workspace]
members = [
  "dns",
  "dns-transport",
]

[profile.release]
lto = true
overflow-checks = true
panic = "abort"

[dependencies]

# dns stuff
dns = { path = "./dns" }
dns-transport = { path = "./dns-transport" }

# command-line
ansi_term = "0.12"
atty = "0.2"
getopts = "0.2"

# transaction ID generation
rand = "0.7"

# json
serde = "1.0"
serde_json = "1.0"

# logging
log = "0.4"

[build-dependencies]
datetime = { version = "0.5.1", default_features = false }
regex = { version = "1.3", default_features = false, features = ["std"] }

[dev-dependencies]
pretty_assertions = "0.6"
