[package]
name = "dog"
description = "A command-line DNS client"

authors = ["Benjamin Sago <ogham@bsago.me>"]
categories = ["command-line-utilities"]
edition = "2018"
exclude = [
    "/completions/*", "/man/*", "/xtests/*",
    "/dog-screenshot.png", "/Justfile", "/README.md", "/.rustfmt.toml", "/.travis.yml",
]
homepage = "https://dns.lookup.dog/"
license = "EUPL-1.2"
version = "0.1.0"

[[bin]]
name = "dog"
path = "src/main.rs"

[workspace]
members = [
  "dns",
  "dns-transport",
]

[profile.release]
lto = true
overflow-checks = true
panic = "abort"

[dependencies]

# dns stuff
dns = { path = "./dns" }
dns-transport = { path = "./dns-transport" }

# command-line
ansi_term = "0.12"
atty = "0.2"
getopts = "0.2"

# transaction ID generation
rand = "0.8"

# json
serde = "1.0"
serde_json = "1.0"

# logging
log = "0.4"

# windows default nameserver determination
[target.'cfg(windows)'.dependencies]
ipconfig = { version = "0.2" }

[build-dependencies]
datetime = { version = "0.5.1", default_features = false }
regex = { version = "1.3", default_features = false, features = ["std"] }

[dev-dependencies]
pretty_assertions = "0.7"

[features]
default = ["tls", "https"]
tls = ["dns-transport/tls"]
https = ["dns-transport/https"]
