[package]
name = "dog"
description = "A command-line DNS client"

authors = ["Benjamin Sago <ogham@bsago.me>"]
categories = ["command-line-utilities"]
edition = "2018"
exclude = [
    "/completions/*", "/man/*", "/xtests/*",
    "/dog-screenshot.png", "/Justfile", "/README.md", "/.rustfmt.toml", "/.travis.yml",
]
homepage = "https://dns.lookup.dog/"
license = "EUPL-1.2"
version = "0.2.0-pre"


[[bin]]
name = "dog"
path = "src/main.rs"
doctest = false


[workspace]
members = [
  "dns",
  "dns-transport",
]


# make dev builds faster by excluding debug symbols
[profile.dev]
debug = true

# use LTO for smaller binaries (that take longer to build)
[profile.release]
lto = true
overflow-checks = true
panic = "abort"
strip = "symbols"
codegen-units = 1
opt-level = "s"


[dependencies]

# dns stuff
dns = { path = "./dns" }
dns-transport = { path = "./dns-transport" }

# command-line
ansi_term = "0.12"
atty = "0.2"
getopts = "0.2"

# transaction ID generation
rand = "0.8"

# json output
json = "0.12"

# logging
log = "0.4"

# windows default nameserver determination
[target.'cfg(windows)'.dependencies]
ipconfig = { version = "0.3" }

[build-dependencies]
datetime = { version = "0.5.1", default_features = false }

[dev-dependencies]
pretty_assertions = "1"

[features]
default = ["with_idna", "with_tls", "with_https", "with_nativetls"]
with_idna = ["dns/with_idna"]

with_tls = ["dns-transport/with_tls"]
with_https = ["dns-transport/with_https"]

with_nativetls = ["dns-transport/with_nativetls"]
with_nativetls_vendored = ["with_nativetls", "dns-transport/with_nativetls", "dns-transport/with_nativetls_vendored"]
with_rustls = ["dns-transport/with_rustls"]
