[package]
name = "dns-transport"
version = "0.2.0-pre"
authors = ["Benjamin Sago <ogham@bsago.me>"]
edition = "2018"

[lib]
doctest = false
test = false


[dependencies]

# dns wire protocol
dns = { path = "../dns" }

# logging
log = "0.4"

# tls networking
native-tls = { version = "0.2.8", optional = true }

# http response parsing
httparse = { version = "1.3", optional = true }

[features]
default = []  # these are enabled in the main dog crate
with_tls   = ["native-tls", "native-tls/alpn"]
with_https = ["native-tls", "native-tls/alpn", "httparse"]
