[package]
name = "dns-transport"
version = "0.2.0-pre"
authors = ["Benjamin Sago <ogham@bsago.me>"]
edition = "2018"

[lib]
doctest = false
test = false


[dependencies]

# dns wire protocol
dns = { path = "../dns" }

# logging
log = "0.4"

# tls networking
native-tls = { version = "0.2", optional = true }

# http response parsing
httparse = { version = "1.3", optional = true }

rustls = { version = "0.19", optional = true }

webpki = { version = "0.21.0", optional = true }

webpki-roots = { version = "0.21.0", optional = true }

cfg-if = "1"

[features]
default = []  # these are enabled in the main dog crate

with_tls   = []
with_https = ["httparse"]

with_nativetls = ["native-tls"]
with_nativetls_vendored = ["native-tls", "native-tls/vendored"]
with_rustls = ["rustls", "webpki-roots", "webpki"]
