[package]
name = "dns"
version = "0.1.0"
authors = ["Benjamin Sago <ogham@bsago.me>"]
edition = "2018"


[dependencies]

# logging
log = "0.4"

# protocol parsing
byteorder = "1.3"

# packet printing
base64 = "0.13"

# testing
mutagen = { git = "https://github.com/llogiq/mutagen", optional = true }

# idna encoding
unic-idna = "0.9.0"

[dev-dependencies]
pretty_assertions = "0.7"

[features]
with_mutagen = ["mutagen"]  # needs nightly
