[package]
name = "dns"
version = "0.2.0-pre"
authors = ["Benjamin Sago <ogham@bsago.me>"]
edition = "2018"

[lib]
doctest = false


[dependencies]

# logging
log = "0.4"

# protocol parsing
byteorder = "1.3"

# packet printing
base64 = "0.13"

# idna encoding
unic-idna = { version = "0.9.0", optional = true }

# testing
mutagen = { git = "https://github.com/llogiq/mutagen", optional = true }

[dev-dependencies]
pretty_assertions = "0.7"

[features]
default = []  # these are enabled in the main dog crate
idna = ["unic-idna"]
with_mutagen = ["mutagen"]  # needs nightly
