[package]
name = "dns"
version = "0.2.0-pre"
authors = ["Benjamin Sago <ogham@bsago.me>"]
edition = "2018"

[lib]
doctest = false


[dependencies]

# logging
log = "0.4"

# protocol parsing helper
byteorder = "1.3"

# printing of certain packets
base64 = "0.21"

# idna encoding
unic-idna = { version = "0.9.0", optional = true }

# mutation testing
mutagen = { git = "https://github.com/llogiq/mutagen", optional = true }

[dev-dependencies]
pretty_assertions = "1"

[features]
default = []  # idna is enabled in the main dog crate
with_idna = ["unic-idna"]
with_mutagen = ["mutagen"]  # needs nightly
