[package]
name = "ech-config"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ech-config"
path = "bin/ech_config.rs"

[dependencies]
# logging
log = "0.4"

# protocol parsing helper
byteorder = "1.3"

# printing of certain packets
base64 = "0.13.0"
pretty_assertions = "0.7.2"
serde = { version = "1.0.130", features = ["derive"] }
serde_with = { version = "1.10.0", features = [] }
serde_json = "1.0.68"

[dev-dependencies]
pretty_assertions = "0.7"
env_logger = "0.9.0"

